--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,228 @@
-.App {
-  text-align: center;
+@import url('https://fonts.googleapis.com/css2?family=Poppins&display=swap');
+*{
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: "Poppins", sans-serif;
+  font-weight: 500;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.navbar{
+  width: 100%;
+  padding: 20px;
+  display: grid;
+  grid-template-columns: repeat(2,1fr);
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.nav-column-1{
+  display: flex;
+  justify-content: center;
 }
+.nav-column-1-center{
+  display: flex;
+  /* align-items: flex-end; */
+}
+.nav-logo{
+ width: 50%;
+ max-width: 250px;
+ /* margin: 0 40px; */
+ object-fit: contain;
+}
+.nav-routes-div-1{
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+}
+.nav-btn{
+  color: white;
+  font-weight: 600;
+  text-decoration: none;
+  margin: 0 10px;
+  border-bottom: 2px solid transparent;
+  transition: 250ms;
+  /* margin: 10px 0; */
+  display: block;
+}
+.nav-btn:hover{
+  border-bottom: 2px solid #0788D9;
+  background-color: #0788D9;  
+  padding: 10px;
+  border-radius: 1px;
+  transition: 250ms;
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+}
+.nav-btn-more{
+  color: white;
+  background-color: #0788D9;
+  display: block;
+  padding: 0 2px;
+  font-weight: 700;
+  text-decoration: none;
+  margin: 0 10px;
+  border-bottom: 2px solid transparent;
+  transition: 100ms;
+transition: 250ms;
+
+}
+.nav-btn-more:hover{
+color: #0788D9;
+background-color: white;
+transition: 250ms;
+padding: 10px;
+
+}
+.nav-column-2{
+  display: flex;
+  align-items: center;
+  justify-content: flex-end;
+}
+.nav-routes-div-2{
+  display: flex;
+  justify-content: flex-end;
+}
+.hamburger-btn{
+  font-size: 30pt;
+  color: #0788D9;
+  font-size: bold;
+  cursor: pointer;
+}
+.hamburger-btn-2{
+  font-size: 30pt;
+  color: white;
+  font-size: bold;
+  cursor: pointer;
+}
+.sidebar{
+  padding:20px;
+  width: 50%;
+  height: 100vh;
+  position: fixed;
+  right: 0;
+  top: 0;
   display: flex;
   flex-direction: column;
-  align-items: center;
+  background-color: #3796d1;
+  transform: translateY(-100%);
+  transition: 1s;
+}
+.sidebar.open{
+  transform: translateY(0%);
+  transition: 1s;
+
+}
+.side-title{
+  display: flex;
+  justify-content: space-between;
+}
+.side-links{
+  flex-direction: column;
+  flex-direction: space-between;
+  width: 100%;
+  height: 100vh;
+}
+.sign-links{
+  position: absolute;
+  bottom: 10px;
+  /* display: flex; */
+  /* justify-content: space-between; */
+}
+.main-section{
+  width: 100%;
+  display: flex;
+  height: 50vh;
+  padding: 40px;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
 }
-
-.App-link {
-  color: #61dafb;
+.main-title{
+  font-size: 40pt;
+  color: #0788D9;
+  font-weight: bold;
+  margin-bottom: 40px;
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+.form-control{
+  width: 100%;
+  display: flex;
+  padding: 10px 0;
+  justify-content: space-evenly;
+  align-items: center;
+  border: 3px solid lightgrey;
+  box-shadow: 3px 3px 0 lightgrey;
+  /* height: 50px; */
+}
+.main-search-logo{
+  color: gray;
+  font-size: 15pt;
+}
+.form-control input{
+  width: 80%;
+  height: 100%;
+  padding: 10px 0px;
+  outline:0;
+  border: none;
+}
+.main-results{
+  width: 100%;
+  padding: 20px;
+}
+.main-results-title{
+  margin-bottom: 25px;
+}
+.main-show-stations{
+  width: 100%;
+  display: grid;
+  grid-template-columns: 1fr;
+}
+.main-station{
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+  margin: 10px;
+}
+.main-station-img{
+  width: 100px;
+  height: 100px; 
+  object-fit: cover;
+  margin-right: 15px;
+}
+.main-station-info{
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+}
+.main-station-title{
+  margin-bottom: 0;
+}
+.main-station-p{
+ color: grey;
+}
+@media screen and (min-width:1020px) {
+  .nav-logo{
+    width: 25%;
+    max-width: 300px;
+    margin-right:40px ;
   }
-  to {
-    transform: rotate(360deg);
+  .nav-btn{
+    color: black;
+    font-weight: 600;
+    text-decoration: none;
+    margin: 0 10px;
+    /* display: block; */
+  }
+  .nav-btn:hover{
+    border-bottom: 2px solid #0788D9;
+    background: none;  
+    padding: 0;
+    border-radius: 1px;
+  
+  }
+  .nav-btn-more{
+    border: 2px solid transparent;
+    font-weight: 600;
+    padding: 10px;
+  }
+  .nav-btn-more:hover{
+    border: 2px solid #0788D9;
+    transition: 100ms;
+  }
+  .main-show-stations{
+    grid-template-columns: repeat(2,1fr);
   }
 }
