--- a/src/App.css
+++ b/src/App.css
@@ -137,10 +137,22 @@ padding:10px 20px;
   padding: 40px;
   justify-content: center;
 }
+.main-section-center{
+  width: 100%;
+  max-width: 700px;
+  justify-content: center;
+  
+}
+.main-search{
+  display: flex;
+  flex-direction: column;
+
+}
 .main-title{
   font-size: 40pt;
   color: #049DD9;
   font-weight: bold;
+  align-self: center;
   margin-bottom: 40px;
 }
 .form-control{
@@ -395,6 +407,32 @@ padding:10px 20px;
 .station{
   width: 100%;
   justify-content: center;
+}
+.search-results-div{
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  position: relative;
+  z-index: 999;
+}
+.search-result{
+/* background-color: lightgreen; */
+padding: 10px;
+background-color: white;
+border-bottom: 2px solid lightgrey;
+}
+.search-link{
+  word-wrap: break-word;
+  color: #00518f;
+  font-weight: bolder;
+  text-decoration: none;
+  display: block;
+  transition: 250ms;
+
+}
+.search-link:hover{
+  color: #0788D9;
+  transition: 250ms;
 }
 @media screen and (min-width:1020px) {
   .nav-logo{
