front-end u kry

--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,13 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins&display=swap');
+@import url('./components/css/Category.css');
+@import url('./components/css/Footer.css');
+@import url('./components/css/Login.css');
+@import url('./components/css/Main.css');
+@import url('./components/css/Navbar.css');
+@import url('./components/css/Profile.css');
+@import url('./components/css/Radio.css');
+@import url('./components/css/Sidebar.css');
+@import url('./components/css/Stations.css');
 *{
   margin: 0;
   padding: 0;
@@ -6,434 +15,26 @@
   font-family: "Poppins", sans-serif;
   font-weight: 500;
 }
-.navbar{
-  width: 100%;
-  padding: 20px;
-  display: grid;
-  grid-template-columns: repeat(2,1fr);
-}
-.nav-column-1{
-  display: flex;
-  justify-content: center;
-}
-.nav-column-1-center{
-  display: flex;
-  /* align-items: flex-end; */
-}
-.nav-logo{
- width: 50%;
- max-width: 250px;
- /* margin: 0 40px; */
- object-fit: contain;
-}
-.nav-routes-div-1{
-  display: flex;
-  justify-content: space-evenly;
-  align-items: center;
-}
-.nav-btn{
-  color: white;
-  font-weight: 600;
-  text-decoration: none;
-  margin: 0 10px;
-  border-bottom: 2px solid transparent;
-  transition: 250ms;
-  /* margin: 10px 0; */
-  display: block;
-}
-.nav-btn:hover{
-  /* border-bottom: 2px solid #0788D9; */
-  /* background-color: #0788D9;   */
-  padding-left: 10px;
-  border-radius: 1px;
-  transition: 250ms;
 
-}
-.nav-btn-more{
-  background-color: white;
-  color: #0788D9;
-  display: inline-block;
-  padding: 10px;
-  font-weight: 700;
-  text-decoration: none;
-  margin: 0 10px;
-  border-bottom: 2px solid transparent;
-  transition: 100ms;
-transition: 250ms;
-
-}
-.nav-btn-more:hover{
-color: #0788D9;
-background-color: white;
-transition: 250ms;
-padding:10px 20px;
-
-}
-.nav-column-2{
-  display: flex;
-  align-items: center;
-  justify-content: flex-end;
-}
-.nav-routes-div-2{
-  display: flex;
-  justify-content: flex-end;
-}
-.hamburger-btn{
-  font-size: 30pt;
-  color: #0788D9;
-  font-size: bold;
-  cursor: pointer;
-}
-.hamburger-btn-2{
-  font-size: 30pt;
-  color: white;
-  font-size: bold;
-  cursor: pointer;
-}
-.sidebar{
-  padding:20px;
-  width: 50%;
-  height: 100vh;
-  position: fixed;
-  right: 0;
-  top: 0;
-  display: flex;
-  flex-direction: column;
-  background-color: #3796d1;
-  transform: translateY(-100%);
-  transition: 1s;
-}
-.sidebar.open{
-  transform: translateY(0%);
-  transition: 1s;
-
-}
-.side-title{
-  display: flex;
-  justify-content: space-between;
-}
-.side-links{
-  flex-direction: column;
-  flex-direction: space-between;
-  width: 100%;
-  height: 100vh;
-}
-.sign-links{
-  /* position: absolute;
-  top: 30%;
-  transform: translateY(-50%); */
-  display: flex;
-}
-.nav-btn.other{
-  padding: 0;
-}
-.nav-btn.other:hover{
-  padding-top: 10px;
-}
-.main-section{
-  width: 100%;
-  display: flex;
-  height: 50vh;
-  padding: 40px;
-  justify-content: center;
-}
-.main-section-center{
-  width: 100%;
-  max-width: 700px;
-  justify-content: center;
-  
-}
-.main-search{
-  display: flex;
-  flex-direction: column;
-
-}
-.main-title{
-  font-size: 40pt;
-  color: #049DD9;
-  font-weight: bold;
-  align-self: center;
-  margin-bottom: 40px;
-}
-.form-control{
-  width: 100%;
-  display: flex;
-  padding: 10px 0;
-  justify-content: space-evenly;
-  align-items: center;
-  border: 3px solid lightgrey;
-  box-shadow: 3px 3px 0 lightgrey;
-  /* height: 50px; */
-}
-.main-search-logo{
-  color: gray;
-  font-size: 15pt;
-}
-.form-control input{
-  width: 80%;
-  height: 100%;
-  padding: 10px 0px;
-  outline:0;
-  border: none;
-}
-.main-results{
-  width: 100%;
-  padding: 20px;
-}
-.main-results-title{
-  margin-bottom: 25px;
-}
-.main-show-stations{
-  width: 100%;
-  display: grid;
-  grid-template-columns: 1fr;
-}
-.main-station{
-  width: 100%;
-  display: flex;
-  justify-content: space-between;
-  margin: 10px;
-}
-.main-station-img{
-  width: 100px;
-  height: 100px; 
-  object-fit: cover;
-  margin-right: 15px;
-}
-.main-station-info{
-  width: 100%;
-  display: flex;
-  flex-direction: column;
-}
-.main-station-title{
-  margin-bottom: 0;
-  color: black;
-  font-size: 15pt;
-  text-decoration: none;
-}
-.main-station-p{
- color: grey;
-}
-.footer{
-  width: 100%;
-  background-color: #048ABF;
-  display: flex;
-  padding: 30px;
-  flex-direction: column;
-  align-items: center;
-}
-.footer-first-row,.footer-second-row,.footer-third-row{
-  display: flex;
-  padding: 20px;
-}
-.footer-img{
-  width: 50%;
-  object-fit: contain;
-  max-width: 150px;
-  margin: 0px 20px;
-}
-.footer-sign-up{
-  color: white;
-  display: inline-block;
-  padding: 5px 20px;
-  margin: 0px 20px;
-  background-color: rgba(0, 0, 0,0.3);
-  text-decoration: none;
-
-}
-.footer-first-row{
-  width: 100%;
-  max-width: 1000px;
-  justify-content: center;
-}
-.footer-second-row{
-  display: flex;
-  width: 50%;
-  max-width: 300px;
-  justify-content: space-evenly;
-}
-.social-media-link{
-  display: inline-flex;
-  padding: 10px;
-  margin: 0px 5px;
-  border-radius: 50%;
-  font-size: 20pt;
-  color: white;
-  background: rgba(0, 0, 0, 0.3);
-}
-.footer-third-row{
-  width: 100%;
-  max-width: 1000px;
-  color: rgba(0, 0, 0, 0.5);
-  flex-direction: column;
-  align-items: center;
-}
-.footer-more-div{
-  display: flex;
-  justify-content: space-between;
-}
-.footer-end-links{
-  color: rgba(0, 0, 0, 0.5);
-  display: inline-block;
-  margin: 0px 5px;
-  text-decoration: none;
-}
-.station{
-  margin:0;
-  padding: 0;
-  
-}
-.station-upper{
-  display: flex;
-  flex-direction: row;
-}
-.img{
-  width: 150px;
-  height: 150px;
-  display: flex;
-  justify-content: flex-start;
-  margin: 80px 0px 0px 80px;
-  border-radius: 50%;
-  box-shadow: 6px 0px 6px 6px rgba(134, 134, 134, 0.3);
-
-}
-.station-name {
-  font-size: 1.5rem;
-  margin-top: 90px;
-  padding: 30px;
-  display: flex;
-  flex-direction: column;
-  justify-content: flex-start;
-  align-items: flex-start;
-}
- 
-
-.rhap_container {
-  display: flex;
-  justify-content:center;
-  
-}
-.rhap_main-controls {
-  display: flex;
-  justify-content: center;
-  align-items: center;
+::-webkit-scrollbar {
+  width: 10px;
 }
 
-.rhap_main-controls-button {
-  margin: 0 5px;
-  color:#00518f;
-  font-size: 50px;
-  width: 50px;
-  height: 50px;
+/* Track */
+::-webkit-scrollbar-track {
+  background: #f1f1f1;
 }
 
-.rhap_play-pause-button {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  font-size: 60px;
-  width: 60px;
-  height: 60px;
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: #0788D9;
 }
 
-
-.rhap_volume-button {
-  flex: 0 0 26px;
-  font-size: 26px;
-  width: 26px;
-  height: 26px;
-  color:#00518f;
-  margin-right: 6px;
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: #00518f;
 }
 
-.rhap_volume-container {
-  display: flex;
-  align-items: center;
-  flex: 0 1 100px;
-  user-select: none;
-
-}
-
-.rhap_volume-bar-area {
-  display: flex;
-  align-items: center;
-  width: 100%;
-  height: 20px;
-  cursor: pointer;
-}
-
-.rhap_volume-bar-area:focus:not(:focus-visible) {
-  outline: 0;
-}
-
-.rhap_volume-bar {
-  box-sizing: border-box;
-  position: relative;
-  width: 50px;
-  height: 4px;
-  background: #dddddd;
-  border-radius: 2px;
-}
-
-.rhap_volume-indicator {
-  box-sizing: border-box;
-  position: absolute;
-  width: 12px;
-  height: 12px;
-  margin-left: -6px;
-  left: 0;
-  top: -4px;
-  background: #00518f;;
-  opacity: 0.9;
-  border-radius: 50px;
-  box-shadow: rgba(134, 134, 134, 0.5) 0 0 3px;
-  cursor: pointer;
-}
-.rhap_volume-indicator:hover {
-  opacity: 0.9;
-}
-.rhap_button-clear {
-  background-color: transparent;
-  border: none;
-  padding: 0;
-  overflow: hidden;
-  cursor: pointer;
-}
-.radio-container{
-  width: 100%;
-  height: 50vh;
-  justify-content: center;
-}
-.station{
-  width: 100%;
-  justify-content: center;
-}
-.search-results-div{
-  width: 100%;
-  display: flex;
-  flex-direction: column;
-  position: relative;
-  z-index: 999;
-}
-.search-result{
-/* background-color: lightgreen; */
-padding: 10px;
-background-color: white;
-border-bottom: 2px solid lightgrey;
-}
-.search-link{
-  word-wrap: break-word;
-  color: #00518f;
-  font-weight: bolder;
-  text-decoration: none;
-  display: block;
-  transition: 250ms;
-
-}
-.search-link:hover{
-  color: #0788D9;
-  transition: 250ms;
-}
 @media screen and (min-width:1020px) {
   .nav-logo{
     width: 25%;
